# hass-wxm

./: README.md  hacs.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: release.yml
custom_components/: strings.json
custom_components/weatherxm/: __init__.py  binary_sensor.py  config_flow.py  const.py  entities.py  manifest.json  sensor.py  weather.py
custom_components/weatherxm/translations/: en.json
