[project]
name = "hass-wxm"
version = "0.0.0"
description = "WeatherXM Home Assistant Integration"
authors = [{ name = "TheNoctambulist", email = "thenoctambulist@zoho.com" }]
dependencies = ["homeassistant>=2024.12.1", "pywxm>=0.4.0"]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "homeassistant-stubs>=2024.12.1",
    "mypy>=1.14.0",
    "ruff>=0.8.4",
    "pre-commit>=4.0.1",
    "voluptuous-stubs>=0.1.1",
]

[tool.pdm.scripts]
validate-manifest = { cmd = [
    "scripts/validate-manifest.py",
    "--manifest",
    "custom_components/weatherxm/manifest.json",
] }

[tool.ruff.lint]
select = ["ALL"] # We'll disable specific rules where appropriate.

ignore = [
    "D102",   # This is not a public API
    "D107",   # Don't require documentation for all __init__ functions
    "D417",   # Don't force every argument to be documented
    "EM101",  # raw-string-in-exception
    "EM102",  # f-string-in-exception
    "TD002",  # don't require authors for to dos
    "TD003",  # don't require issues links for to dos
    "TRY003", # Exception messages are useful.
    "UP007",  # typing.Optional is useful. See https://github.com/astral-sh/ruff/issues/4858

    # Compatibility/redundancy with Ruff Formatter
    "W191",
    "E111",
    "E114",
    "E117",
    "D206",
    "D300",
    "Q000",
    "Q001",
    "Q002",
    "Q003",
    "COM812",
    "COM819",
    "ISC001",
    "ISC002",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
